# steam-suite

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
docs/: index.html
docs/assets/: main.js  style.css
docs/screenshots/: README.md
libs/: README.md
scripts/: build-release.ps1
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: credentials.rs  giveaways.rs  mod.rs  saveslot.rs  scheduler.rs  settings.rs  steam.rs
src-tauri/src/modules/: accounts.rs  http_curl.rs  mod.rs  native_libs.rs  settings.rs
src-tauri/src/modules/giveaways/: bot.rs  mod.rs  steamgifts.rs  wins.rs
src-tauri/src/modules/saveslot/: cli.rs  mod.rs  paths.rs
src-tauri/src/modules/scheduler/: mod.rs  runner.rs
src-tauri/src/modules/steam_helper/: achievements.rs  cards.rs  credentials.rs  idling.rs  inventory.rs  library.rs  mod.rs  ops.rs  paths.rs  profile.rs  rate_limit.rs  redeem.rs  session.rs  steeeam.rs  utility.rs
src/features/achievements/: AchievementsPage.tsx
src/features/auto-idler/: AutoIdlerPage.tsx
src/features/card-farming/: CardFarmingPage.tsx
src/features/dashboard/: DashboardPage.tsx  ShareableCard.tsx  SteamProfileSection.tsx
src/features/games/: GamesPage.tsx
src/features/giveaways/: GiveawaysPage.tsx
src/features/inventory/: InventoryPage.tsx
src/features/saves/: SavesPage.tsx
src/shared/api/: tauri.ts
src/styles/: globals.css
tools/steam-utility/: README.md
(+28 files in other folders)
