[package]
name = "steam-suite"
version = "0.1.0"
description = "All-in-one Steam automation suite"
authors = ["Kava-4"]
edition = "2021"

[lib]
name = "steam_suite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "unstable"] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread", "macros"] }
scraper = "0.22"
dirs = "6"
regex = "1"
sysinfo = "0.33"
steamlocate = "2"
lazy_static = "1"
include_dir = "0.7"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm",
] }
